--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,6 +9,7 @@ body{
     height: 100%;
     background-color: #e2dddd;
     color: var(--white);
+    margin: 0;
 }
 
 #author{
@@ -95,11 +96,9 @@ input{
     color: aliceblue;
     text-align: center;
     border-radius: 2px;
-    padding: auto;
+    padding: 2px;
     position: fixed;
     z-index: 1;
-    left: 20%;
-    top: 80px;
     font-size: 17px;
   }
 #validation.show {
